--- a/www/app.html
+++ b/www/app.html
@@ -33,7 +33,7 @@
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
       </nav>
-        <div class="collection">
+        <div id="llistaCursos"class="collection">
           <a href="#!" class="collection-item">Curs 1</a>
           <a href="#!" class="collection-item">Curs 2</a>
           <a href="#!" class="collection-item">Curs 3</a>
@@ -44,5 +44,6 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
