--- a/www/app.html
+++ b/www/app.html
@@ -33,12 +33,14 @@
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
       </nav>
-        <div id="llistaCursos"class="collection">
+      <div style="height: 100%;">
+        <div id="llistaCursos"class="collection" style="">
           <a href="#!" class="collection-item">Curs 1</a>
           <a href="#!" class="collection-item">Curs 2</a>
           <a href="#!" class="collection-item">Curs 3</a>
           <a href="#!" class="collection-item">Curs 4</a>
         </div>
+      </div>  
   <!--  Scripts-->
   <script src="cordova.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
