Se guarda el SToken i la api que estamos utilizando

--- a/www/app.html
+++ b/www/app.html
@@ -34,7 +34,16 @@
         </div>
       </nav>
       <div style="height: 100%;">
-        <div id="llistaCursos"class="collection" style="">
+        <br>
+        <div class="chip">
+          <img src="img/apiIcon.png" alt="Contact Person">
+          <span id="usedAPI">Unknown API</span>
+        </div>
+        <div class="chip">
+          <img src="img/tokenicon.jpg" alt="Contact Person">
+          <span id="s_token">Unknown Session token</span>
+        </div>
+        <div id="llistaCursos"class="collection">
           <a href="#!" class="collection-item">Curs 1</a>
           <a href="#!" class="collection-item">Curs 2</a>
           <a href="#!" class="collection-item">Curs 3</a>
