--- a/www/index.html
+++ b/www/index.html
@@ -12,8 +12,8 @@
   <!-- CSS  -->
     <style>
         body{
-          background: rgb(156,0,255);
-background: linear-gradient(138deg, rgba(156,0,255,1) 0%, rgba(74,119,255,1) 48%, rgba(0,183,255,1) 100%);   
+          background: rgb(131,58,180);
+          background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
         }
     </style>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -28,7 +28,7 @@ background: linear-gradient(138deg, rgba(156,0,255,1) 0%, rgba(74,119,255,1) 48%
         <form class="col s12">
           <div class="row">
             <div class="input-field col s12" >
-              <select style="color: white;">
+              <select id="selectAPI" style="color: white;">
                 <option value="1" selected >JEEL API</option>
                 <option value="2">Unknown API 1</option>
                 <option value="3">Unknown API 2</option>
