Implementacion a medias de la API

--- a/www/app.html
+++ b/www/app.html
@@ -8,7 +8,6 @@
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
   <title>Cursos</title>
-
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -17,7 +16,7 @@
 <!-- Page Body  -->
 <body>
     <nav>
-        <div class="nav-wrapper">
+        <div class="nav-wrapper blue lighten-3">
           <a href="#!" class="brand-logo">App mobil</a>
           
           <ul class="right hide-on-med-and-down">
@@ -33,7 +32,7 @@
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
       </nav>
-      <div style="height: 100%;">
+      <div style="height: 100%; width: 90%; background: white;">
         <br>
         <div class="chip">
           <img src="img/apiIcon.png" alt="Contact Person">
