Limpieza de codigo y soluciones varias

--- a/www/app.html
+++ b/www/app.html
@@ -20,20 +20,22 @@
           <a href="#!" class="brand-logo">App mobil</a>
           
           <ul class="right hide-on-med-and-down">
-            <li><a href="sass.html">Cursos</a></li>
-            <li><a href="badges.html">Perfil</a></li>
-            <li><a href="collapsible.html">About</a></li>
+            <li class="active"><a href="app.html">Cursos</a></li>
+            <li><a href="#">Perfil</a></li>
+            <li><a href="#">About</a></li>
           </ul>
           <ul class="sidenav" id="mobile-demo">
-            <li><a href="sass.html">Cursos</a></li>
-            <li><a href="badges.html">Perfil</a></li>
-            <li><a href="collapsible.html">About</a></li>
+            <li class="active"><a href="app.html">Cursos</a></li>
+            <li><a href="#">Perfil</a></li>
+            <li><a href="#">About</a></li>
           </ul>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
       </nav>
       <div style="height: 100%; background: white; margin-top: 2px;">
         <h1>Cursos</h1>
+        <!--
+          DEBUG DATA
         <div class="chip">
           <img src="img/apiIcon.png" alt="Contact Person">
           <span id="usedAPI">Unknown API</span>
@@ -42,6 +44,7 @@
           <img src="img/tokenicon.jpg" alt="Contact Person">
           <span id="s_token">Unknown Session token</span>
         </div>
+        -->
         <div id="llistaCursos"class="collection">
           <a href="#!" class="collection-item">Curs 1</a>
           <a href="#!" class="collection-item">Curs 2</a>
