Seleccion de cursos con sus respectivos elementos y tareas. Readme actualizado

--- a/www/app.html
+++ b/www/app.html
@@ -36,18 +36,17 @@
       -->
       <!-- Tabs  -->
       <ul id="tabs-swipe-demo" class="tabs">
-        <li class="tab col s3"><a class="active" href="#test-swipe-1">Test 1</a></li>
-        <li class="tab col s3"><a href="#test-swipe-2">Test 2</a></li>
+        <li class="tab col s3"><a class="active" href="#test-swipe-1">Cursos</a></li>
+        <li class="tab col s3"><a href="#test-swipe-2">Detalles</a></li>
       </ul>
       <!-- Tab 1  -->
       <div id="test-swipe-1" class="col s12 white">
           <h1>Cursos</h1>
           <div class="chip">
-            <img src="img/apiIcon.png" alt="Contact Person">
             <span id="usedAPI">Unknown API</span>
           </div>
           <div class="chip">
-            <img src="img/tokenicon.jpg" alt="Contact Person">
+          
             <span id="s_token">Unknown Session token</span>
           </div>
           <div id="llistaCursos"class="collection">
@@ -55,7 +54,14 @@
           </div>
       </div>
       <div id="test-swipe-2" class="col s12 white">
-
+        <h2>Elements</h2>
+        <div id="llista_elements"class="collection">
+          <a href="#!" class="collection-item">No n'hi han elements</a>
+        </div>
+        <h2>Tasques</h2>
+        <div id="llista_tasks"class="collection">
+          <a href="#!" class="collection-item">No n'hi han tasques</a>
+        </div>
       </div>
       <!-- Tabs  -->
       
