Scroll en las tabs solucionado

--- a/www/app.html
+++ b/www/app.html
@@ -42,7 +42,7 @@
       </ul>
       <!-- Tab 1  -->
       
-      <div id="test-swipe-1" class="col s12 white">
+      <div id="test-swipe-1" class="col s12 white" style="overflow-y: scroll !important;">
           <h1>Cursos</h1>
           <div class="chip">
             <span id="usedAPI">Unknown API</span>
@@ -56,7 +56,7 @@
           </div>
       </div>
       <!-- Tab 2  -->
-      <div id="test-swipe-2" class="col s12 white">
+      <div id="test-swipe-2" class="col s12 white" style="overflow-y: scroll !important;">
         
         <h3 id="course_title"></h3>
         <h4 id="course_desc"></h4>
