Ultimos cambios de arreglo de errores

--- a/www/app.html
+++ b/www/app.html
@@ -18,8 +18,7 @@
 </head>
 
 <body>
-  <!-- Menu  -->
-  <!--
+
     <nav>
         <div class="nav-wrapper blue lighten-3">
           <a href="#!" class="brand-logo">App mobil</a>
@@ -37,9 +36,8 @@
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
       </nav>
-      -->
+
   <!-- Tabs  -->
-  
     <ul id="tabs-swipe-demo" class="tabs">
       <li class="tab col s3"><a class="active" href="#test-swipe-1">Cursos</a></li>
       <li class="tab col s3"><a href="#test-swipe-2">Detalles</a></li>
@@ -48,6 +46,7 @@
 
     <div id="test-swipe-1" class="col s12 white">
       <h1>Cursos</h1>
+      <!-- Debug data 
       <div class="chip">
         <span id="usedAPI">Unknown API</span>
       </div>
@@ -55,9 +54,11 @@
 
         <span id="s_token">Unknown Session token</span>
       </div>
+      -->
       <div id="llistaCursos" class="collection">
         <a href="#!" class="collection-item">Unable to get courses</a>
       </div>
+       
     </div>
     <!-- Tab 2  -->
     <div id="test-swipe-2" class="col s12 white">
@@ -72,8 +73,11 @@
       <div id="llista_tasks" class="collection">
         <a href="#!" class="collection-item">No n'hi han tasques</a>
       </div>
+      <h5>Tasques VR</h5>
+      <div id="llista_tasksvr" class="collection">
+        <a href="#!" class="collection-item">No n'hi han tasques</a>
+      </div>
     </div>
-    <!-- Tabs  -->
 
     <!--  Scripts-->
     <script src="cordova.js"></script>
