Diseño adaptado parcialmente

--- a/www/app.html
+++ b/www/app.html
@@ -20,8 +20,7 @@
 
     <nav>
         <div class="nav-wrapper">
-          <a href="#!" class="brand-logo">App mobil</a>
-          
+          <a href="#!" class="brand-logo"><img src="/img/vr_logo.png" width="100px" height="auto"></a>
           <ul class="right hide-on-med-and-down">
             <li class="active"><a href="app.html">Cursos</a></li>
             <li><a href="#">Perfil</a></li>
