Adaptacion de diseño terminada

--- a/www/index.html
+++ b/www/index.html
@@ -21,15 +21,14 @@
     <div class="row" style="margin-top: 5%;">
       <center>
         <img src="/img/vr_logo.png" width="50%" height="auto">
-      </center>
         <h1>Inici de sessió</h1>
+      </center>
         <form class="col s12">
           <div class="row">
             <div class="input-field col s12" >
               <select id="selectAPI" style="color: white;">
                 <option value="1" selected >JEEL API</option>
-                <option value="2">Unknown API 1</option>
-                <option value="3">Unknown API 2</option>
+                <option value="2">API Alternativa</option>
               </select>
               <label>API</label>
             </div>
@@ -37,7 +36,7 @@
           <div style="background-color: #DEEFE7; ">
             <div class="row" style="margin: 10px;">
               <div class="input-field col s12">
-                <input placeholder="Usuari" id="user" type="text" class="validate" style="color: white;">
+                <input placeholder="Usuari" id="user" type="text" class="validate">
                 <label for="first_name">Ususari</label>
               </div>
             </div>
@@ -45,14 +44,24 @@
           <div style="background-color: #DEEFE7;">
             <div class="row" style="margin: 10px;">
               <div class="input-field col s12">
-                  <input placeholder="Clau" id="password" type="password" class="validate" style="color: white;">
+                  <input placeholder="Clau" id="password" type="password" class="validate">
                 <label for="password">Clau</label>
               </div>
             </div>
           </div>
+          <div id="customAPI" class="api_hidden" style="background-color: #DEEFE7;">
+            <div class="row" style="margin: 10px;">
+              <div class="input-field col s12">
+                <input placeholder="Url API" id="urlAPI" type="text" class="validate">
+                <label for="apiAlternativa">API alternativa:</label>
+              </div>
+            </div>
+          </div>
+          <center>
           <button id="loginButton" class="btn waves-effect waves-light">Entrar
             <i class="material-icons right">send</i>
         </button>
+      </center>
         </form>
         
     </div>
