--- a/www/app.html
+++ b/www/app.html
@@ -81,7 +81,16 @@
       </div>
     </div>
   </div>
-
+  <!-- Modal -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
     <!--  Scripts-->
     <script src="cordova.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
