--- a/www/index.html
+++ b/www/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <!-- Cordova polic  -->
-  <meta http-equiv="Content-Security-Policy" content="default-src https://code.jquery.com https://fonts.gstatic.com 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' data: https://classvr-room-api.herokuapp.com ; style-src https://fonts.googleapis.com 'self' 'unsafe-inline'; media-src *; img-src 'self' * data: content:;">  <meta name="format-detection" content="telephone=no">
+  <meta http-equiv="Content-Security-Policy" content="default-src https://code.jquery.com https://fonts.gstatic.com 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' data: http://classroomvr.herokuapp.com ; Access-Control-Allow-Origin: http://classroomvr.herokuapp.com; style-src https://fonts.googleapis.com 'self' 'unsafe-inline'; media-src *; img-src 'self' * data: content:;">  <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
   <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
   <title>Login</title>
@@ -27,7 +27,7 @@
           <div class="row">
             <div class="input-field col s12" >
               <select id="selectAPI" style="color: white;">
-                <option value="1" selected >JEEL API</option>
+                <option value="1" selected >AWS2 API</option>
                 <option value="2">API Alternativa</option>
               </select>
               <label>API</label>
