Implementado, login, carga de cursos y tasks con la API de AWS

--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
             <div class="row" style="margin: 10px;">
               <div class="input-field col s12">
                 <input placeholder="Usuari" id="user" type="text" class="validate">
-                <label for="first_name">Ususari</label>
+                <label for="first_name">Usuari</label>
               </div>
             </div>
           </div>
