Implementado la muestra de resultados de vrTasks solo del usuario que lo mira con nuestra API, traduccion al castellano y mejorado mensajes de error

--- a/www/app.html
+++ b/www/app.html
@@ -23,13 +23,11 @@
           <a href="#!" class="brand-logo"><img src="/img/vr_logo.png" width="100px" height="auto"></a>
           <ul class="right hide-on-med-and-down">
             <li class="active"><a href="app.html">Cursos</a></li>
-            <li><a id="logoutButton" href="#">Sortir</a></li>
-            <li><a href="#">About</a></li>
+            <li><a id="logoutButton" href="#">Salir</a></li>
           </ul>
           <ul class="sidenav" id="mobile-demo">
             <li class="active"><a href="app.html">Cursos</a></li>
-            <li><a id="logoutButtonM" href="#">Sortir</a></li>
-            <li><a href="#">About</a></li>
+            <li><a id="logoutButtonM" href="#">Salir</a></li>
           </ul>
           <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
@@ -38,12 +36,13 @@
   <!-- Tabs  -->
     <ul id="tabs-swipe-demo" class="tabs">
       <li class="tab col s3"><a class="active" href="#test-swipe-1">Cursos</a></li>
-      <li class="tab col s3"><a href="#test-swipe-2">Detalls</a></li>
+      <li class="tab col s3"><a href="#test-swipe-2">Detalles</a></li>
     </ul>
     <!-- Tab 1  -->
 
     <div id="test-swipe-1" class="col s12 white">
       <h1>Cursos</h1> 
+      <!--Dev info
       <div class="chip">
         <span id="usedAPI">Unknown API</span>
       </div>
@@ -51,47 +50,47 @@
 
         <span id="s_token">Unknown Session token</span>
       </div>
+      -->
       <div id="llistaCursos" class="collection">
-        <a href="#!" class="collection-item">Unable to get courses</a>
+        <a href="#!" class="collection-item">No se han podido obtener los cursos</a>
       </div>
-       
     </div>
     <!-- Tab 2  -->
     <div id="test-swipe-2" class="col s12 white" style="margin: 10px; width: 99%;">
       <div style="background-color: #DEEFE7;"><h3 id="course_title" style="margin: 10px;"></h3></div>
       <h4 id="course_desc"></h4>
       <div style="background-color: #159A9C;">
-      <h5 style="color: #FFFFFF;">Elements</h5>
+      <h5 style="color: #FFFFFF;">Elementos</h5>
       <div id="llista_elements" class="collection">
-        <a href="#!" class="collection-item">No n'hi han elements</a>
+        <a href="#!" class="collection-item">No hay elementos</a>
       </div>
       </div>
       <div style="background-color: #159A9C;">
-      <h5 style="color: #FFFFFF;">Tasques</h5>
+      <h5 style="color: #FFFFFF;">Tareas</h5>
       <div id="llista_tasks" class="collection">
-        <a href="#!" class="collection-item">No n'hi han tasques</a>
+        <a href="#!" class="collection-item">No hay tareas</a>
       </div>
       </div>
       <div style="background-color: #159A9C;">
-      <h5 style="color: #FFFFFF;">Tasques VR</h5>
+      <h5 style="color: #FFFFFF;">Tareas VR</h5>
       <div id="llista_tasksvr" class="collection">
-        <a href="#!" class="collection-item">No n'hi han tasques</a>
+        <a href="#!" class="collection-item">No hay tareas VR</a>
       </div>
     </div>
   </div>
   <!-- Modal -->
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <h4>Qualificacions</h4>
+      <h4>Qualificaciones</h4>
       <div id="qualifications">
-        <p id="qualText">No hi han qualificacions disponibles.</p>
+        <p id="qualText">No hay qualificaciones disponibles</p>
       </div>
       <div id="pin">
       </div>
 
     </div>
     <div class="modal-footer">
-      <a id="getPIN" href="#!" class="waves-effect waves-green btn-flat">Obtenir PIN</a>
+      <a id="getPIN" href="#!" class="waves-effect waves-green btn-flat">Obtener PIN</a>
       <a href="#!" class="modal-close waves-effect waves-green btn-flat">Aceptar</a>
     </div>
   </div>
